--- a/popup.html
+++ b/popup.html
@@ -7,17 +7,46 @@
     <style>
         body {
             font-family: 'Segoe UI', Arial, sans-serif;
-            width: 350px;
-            padding: 15px;
+            width: 700px; /* Largeur totale augmentée */
+            min-height: 400px; /* Hauteur minimale pour les deux colonnes */
+            margin: 0;
+            padding: 0;
             background-color: #f4f7f6;
             color: #333;
-            text-align: center;
+            display: flex; /* Utilise flexbox pour le layout principal */
+            flex-direction: column; /* Entête en haut, puis contenu en dessous */
         }
         h2 {
             color: #2c3e50;
             font-size: 1.4rem;
-            margin-bottom: 20px;
+            margin: 0; /* Supprime la marge par défaut pour le padding */
+            padding: 15px 0; /* Ajoute du padding */
+            text-align: center;
+            background-color: #4CAF50;
+            color: white;
+            border-bottom: 1px solid #45a049;
         }
+
+        .main-content-wrapper {
+            display: flex; /* Utilise flexbox pour les deux colonnes */
+            flex-grow: 1; /* Permet au wrapper de prendre l'espace disponible */
+            padding: 15px;
+            gap: 20px; /* Espace entre les colonnes */
+        }
+
+        .left-panel {
+            flex: 0 0 300px; /* Largeur fixe pour le panneau gauche (paramètres + boutons) */
+            display: flex;
+            flex-direction: column;
+            gap: 15px; /* Espace entre les sections du panneau gauche */
+        }
+
+        .right-panel {
+            flex: 1; /* Le panneau droit prend l'espace restant */
+            display: flex;
+            flex-direction: column;
+        }
+        
         button {
             background-color: #4CAF50;
             color: white;
@@ -29,7 +58,7 @@
             transition: background-color 0.3s ease;
             width: 100%;
             box-sizing: border-box;
-            margin-bottom: 10px;
+            margin-bottom: 0px; /* Supprime la marge du bas */
         }
         button:hover {
             background-color: #45a049;
@@ -43,7 +72,7 @@
             border: 1px solid #ddd;
             border-radius: 8px;
             padding: 15px;
-            margin-bottom: 15px;
+            /* margin-bottom: 15px; */ /* Géré par le gap du left-panel */
             text-align: left;
             box-shadow: 0 2px 4px rgba(0,0,0,0.05);
         }
@@ -81,18 +110,20 @@
         }
 
         #status-message {
-            margin-top: 15px;
+            margin-top: 0px; /* Ajusté */
+            margin-bottom: 15px; /* Ajusté */
             font-size: 0.9em;
             color: #555;
             min-height: 20px;
+            text-align: left; /* Alignement à gauche pour le panneau droit */
         }
         #summary-output {
-            margin-top: 20px;
+            flex-grow: 1; /* Prend tout l'espace vertical disponible */
             padding: 15px;
             background-color: #fff;
             border: 1px solid #ddd;
             border-radius: 8px;
-            min-height: 100px;
+            /* min-height: 100px; */ /* Enlevé car flex-grow gère la hauteur */
             text-align: left;
             font-size: 0.95rem;
             line-height: 1.6;
@@ -100,6 +131,7 @@
             box-shadow: 0 2px 4px rgba(0,0,0,0.05);
             white-space: pre-wrap;
             word-wrap: break-word;
+            overflow-y: auto; /* Ajout d'un scroll si le contenu est long */
         }
         #summary-output.empty {
             color: #888;
@@ -110,62 +142,69 @@
 <body>
     <h2>Résumé Intelligent</h2>
 
-    <div class="settings-section">
-        <label for="provider-select">Service de résumé :</label>
-        <select id="provider-select">
-            <option value="classic">Classique (local)</option>
-            <option value="huggingface">Hugging Face</option>
-            <option value="openai">OpenAI (ChatGPT)</option>
-        </select>
+    <div class="main-content-wrapper">
+        <div class="left-panel">
+            <div class="settings-section">
+                <label for="provider-select">Service de résumé :</label>
+                <select id="provider-select">
+                    <option value="classic">Classique (local)</option>
+                    <option value="huggingface">Hugging Face</option>
+                    <option value="openai">OpenAI (ChatGPT)</option>
+                </select>
 
-        <div id="huggingface-settings" style="display: none;">
-            <label for="hf-model-select">Modèle Hugging Face :</label>
-            <select id="hf-model-select">
-                <option value="csebuetnlp/mt5_multilingual_XLSum">mt5_multilingual_XLSum (Recommandé)</option>
-                <option value="csebuetnlp/mt5_m2m_crossSum">mt5_m2m_crossSum</option>
-                <option value="csebuetnlp/mt5_m2o_english_crossSum">mt5_m2o_english_crossSum</option>
-                <option value="csebuetnlp/mt5_m2o_arabic_crossSum">mt5_m2o_arabic_crossSum</option>
-                <option value="MaagDeveloper/csebuetnlp-mt5_multilingual_XLSum">MaagDeveloper/mt5_multilingual_XLSum</option>
-                <option value="facebook/bart-large-cnn">facebook/bart-large-cnn (Test de base)</option> </select>
-            <label for="hf-api-key">Clé API Hugging Face :</label>
-            <input type="password" id="hf-api-key" placeholder="Votre clé d'accès Hugging Face">
-            <span class="info-text">Obtenez votre clé sur <a href="https://huggingface.co/settings/tokens" target="_blank">Hugging Face Tokens</a>.</span>
+                <div id="huggingface-settings" style="display: none;">
+                    <label for="hf-model-select">Modèle Hugging Face :</label>
+                    <select id="hf-model-select">
+                        <option value="csebuetnlp/mT5_multilingual_XLSum">mT5_multilingual_XLSum (Recommandé)</option>
+                        <option value="z-dickson/bart-large-cnn-climate-change-summarization">bart-large-cnn-climate-change-summarization</option>
+                        <option value="csebuetnlp/mT5_m2o_arabic_crossSum">mT5_m2o_arabic_crossSum</option>
+                        <option value="MaagDeveloper/csebuetnlp-mT5_multilingual_XLSum">MaagDeveloper/mT5_multilingual_XLSum</option>
+                        <option value="facebook/bart-large-cnn">facebook/bart-large-cnn (Test de base)</option>
+                    </select>
+                    <label for="hf-api-key">Clé API Hugging Face :</label>
+                    <input type="password" id="hf-api-key" placeholder="Votre clé d'accès Hugging Face">
+                    <span class="info-text">Obtenez votre clé sur <a href="https://huggingface.co/settings/tokens" target="_blank">Hugging Face Tokens</a>.</span>
+                </div>
+
+                <div id="openai-settings" style="display: none;">
+                    <label for="openai-model-select">Modèle OpenAI :</label>
+                    <select id="openai-model-select">
+                        <option value="gpt-3.5-turbo">gpt-3.5-turbo (Recommandé)</option>
+                        <option value="gpt-4o">gpt-4o</option>
+                        <option value="gpt-4-turbo">gpt-4-turbo</option>
+                    </select>
+                    <label for="openai-api-key">Clé API OpenAI :</label>
+                    <input type="password" id="openai-api-key" placeholder="Votre clé API OpenAI">
+                    <span class="info-text">Obtenez votre clé sur <a href="https://platform.openai.com/api-keys" target="_blank">OpenAI API Keys</a>.</span>
+                </div>
+
+                <label for="output-language-select">Langue du résumé :</label>
+                <select id="output-language-select">
+                    <option value="auto">Détection automatique</option>
+                    <option value="en">Anglais</option>
+                    <option value="fr">Français</option>
+                    <option value="es">Espagnol</option>
+                    <option value="de">Allemand</option>
+                    <option value="zh">Chinois</option>
+                    <option value="ar">Arabe</option>
+                    <option value="ru">Russe</option>
+                    <option value="hi">Hindi</option>
+                </select>
+                <span class="info-text">Si 'Détection automatique', le résumé sera dans la langue d'origine.</span>
+
+                <label for="summary-length-input">Longueur du résumé (phrases) :</label>
+                <input type="number" id="summary-length-input" value="5" min="1" max="20">
+                <span class="info-text">Pour le mode Classique et influence les LLM.</span>
+            </div>
+
+            <button id="summarize-btn">Résumer cette page</button>
         </div>
 
-        <div id="openai-settings" style="display: none;">
-            <label for="openai-model-select">Modèle OpenAI :</label>
-            <select id="openai-model-select">
-                <option value="gpt-3.5-turbo">gpt-3.5-turbo (Recommandé)</option>
-                <option value="gpt-4o">gpt-4o</option>
-                <option value="gpt-4-turbo">gpt-4-turbo</option>
-            </select>
-            <label for="openai-api-key">Clé API OpenAI :</label>
-            <input type="password" id="openai-api-key" placeholder="Votre clé API OpenAI">
-            <span class="info-text">Obtenez votre clé sur <a href="https://platform.openai.com/api-keys" target="_blank">OpenAI API Keys</a>.</span>
+        <div class="right-panel">
+            <div id="status-message"></div>
+            <div id="summary-output" class="empty">Le résumé apparaîtra ici.</div>
         </div>
-
-        <label for="output-language-select">Langue du résumé :</label>
-        <select id="output-language-select">
-            <option value="auto">Détection automatique</option>
-            <option value="en">Anglais</option>
-            <option value="fr">Français</option>
-            <option value="es">Espagnol</option>
-            <option value="de">Allemand</option>
-            <option value="zh">Chinois</option>
-            <option value="ar">Arabe</option>
-            <option value="ru">Russe</option>
-            <option value="hi">Hindi</option>
-        </select>
-        <span class="info-text">Si 'Détection automatique', le résumé sera dans la langue d'origine.</span>
-
-        <label for="summary-length-input">Longueur du résumé (phrases) :</label>
-        <input type="number" id="summary-length-input" value="5" min="1" max="20">
-        <span class="info-text">Pour le mode Classique et influence les LLM.</span>
     </div>
-
-    <button id="summarize-btn">Résumer cette page</button>
-    <div id="status-message"></div>
-    <div id="summary-output" class="empty">Le résumé apparaîtra ici.</div>
 
     <script src="popup.js"></script>
 </body>
